--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "d3": "^5.15.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
-    "react-mdl": "^1.11.0",
+    "react-mdl": "^2.0.2",
+    "react-move": "^6.1.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-scrollbar": "^0.5.6"
